namespace point_2.src.Interfaces;

public interface ICreditCard
{
    string Brand { get; }
    string IssuerBank { get; }
}
