namespace point_2.src.Interfaces;

public interface IProduct
{
    string Name { get; }
    decimal BasePrice { get; }
}
